<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jobemployement.karnatakaemployment.EntrepreneurshipActivity"
    android:background="#c0d6e4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/entrehead"
            android:textAlignment="center"
            android:textColor="#010048"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/img_enter"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:background="#D2D3D5" />

        <TextView
            android:id="@+id/tv_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D2D3D5"
            android:textColor="#00321B"
            android:textSize="18sp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"


            android:height="36dp"
            android:text="@string/newentre"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:autoLink="all"
            android:clickable="true"
            android:text="https://goo.gl/forms/wXNbP7xEPsZEFfzH2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:height="36dp"

            android:text="@string/existentre"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:autoLink="all"
            android:clickable="true"
            android:text="https://goo.gl/forms/3n6rf5ALgPoXojyR2" />


    </LinearLayout>

</ScrollView>

    <!--Developed by Anudeep and Vijay-->
    <!--Under the guidance of Prof.Nagegowda, PES University-->